# CUDAResNet

./: .clang-format  CMakeLists.txt  README.md
Resnet/: DataParse.md  ResNetArchitecture.md
assets/: resnet18_manifest.json
include/: CopyModel.h  ImageClassifier.h  ModelParse.h  util.h
src/: CopyModel.cpp  ImageClassifier.cpp  ModelParse.cpp  main.cpp
